# rust_gpt_cli

./: .gitignore  Cargo.toml  LICENSE.GPL  README  README.md  install.sh
src/: env.rs  helpers.rs  lib.rs  log.rs  main.rs  menu.rs  req.rs  structs.rs  syntax.rs
