[package]
name = "rust_gpt_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
flexi_logger = { version = "0.24.2", features = ["async"] }
rustyline = "10.1.0"
chrono = "0.4.23"
crossterm = "0.25.0"
futures-util = "0.3.25"
serde_json = "1.0.89"
tokio = { version = "1.24.1", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "stream"] }